--- a/output/papers/latex-stuff/librarySweAcoust.bib
+++ b/output/papers/latex-stuff/librarySweAcoust.bib
@@ -173,7 +173,7 @@
 
 @article{chesworth2003,
   title = {Effect of Phonetic Context on Women's Vowel Area},
-  author = {Chesworth, J. and Cot{\'e}, K. and Shaw, C. and Williams, S. and Hodge, W.},
+  author = {Chesworth, Janine and Cot{\'e}, Kim and Shaw, Colleen and Williams, Sandra and Hodge, Megan},
   year = {2003},
   journal = {Canadian Acoustics/Acoustique Canadienne},
   volume = {31},
@@ -209,6 +209,17 @@
   number = {2},
   pages = {131--155},
   doi = {10.3109/026992096089851670269-9206}
+}
+
+@article{davidson2021,
+  title={The versatility of creaky phonation: Segmental, prosodic, and sociolinguistic uses in the world's languages},
+  author={Davidson, Lisa},
+  journal={Wiley Interdisciplinary Reviews: Cognitive Science},
+  volume={12},
+  number={3},
+  pages={e1547},
+  year={2021},
+  publisher={Wiley Online Library}
 }
 
 @article{eklund1997,
@@ -1066,7 +1077,7 @@
   title = {Comparing accounts of formant normalization against {US} {E}nglish listeners' vowel perception},
   author = {Persson, Anna and Barreda, Santiago and Jaeger, T Florian},
   year = {2024},
-  publisher = {manuscript; Stockholm University}
+  publisher = {Manuscript; Stockholm University}
 }
 
 @article{peterson-barney1952,
